updated to Java11 and v.2.0.0